--- a/FrontEnd/eRural/src/app/inicial/inicial.component.html
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.html
@@ -4,15 +4,15 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carro carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://i.imgur.com/JM4iYOB.jpg" alt="Primeiro Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/u3XPxbg.jpg" alt="Primeiro Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.imgur.com/1VDmpP4.jpg" alt="Segundo Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/W1ApRdf.jpg" alt="Segundo Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.imgur.com/M7HTMiU.jpg" alt="Terceiro Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/4VaegwM.jpg" alt="Terceiro Slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
