--- a/FrontEnd/eRural/src/app/cadastro/cadastro.component.html
+++ b/FrontEnd/eRural/src/app/cadastro/cadastro.component.html
@@ -13,55 +13,74 @@
                         <img src="https://i.imgur.com/CCSQaiP.png" alt="logo" width="" height="">
                     </div>
                     <!--/DIV PARA LOGO-->
+
                     <!--Div nome Completo-->
                     <div class="form-group colorFont">
                         <label for="nome">Nome completo</label>
-                        <input class="form-control" type="text" name="nome" id="nome"
+                        <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome"
                             placeholder="Informe seu nome completo">
                     </div>
                     <!--/Div nome Completo-->
+
                     <!--Email-->
                     <div class="form-group colorFont mb-3">
                         <label for="email">E-mail</label>
-                        <input class="form-control" type="text" name="email" id="email"
+                        <input [(ngModel)]='usuario.usuario' class="form-control" type="email" name="email" id="email"
                             placeholder="Informe seu melhor e-mail">
+                           
                     </div>
                     <!--/Email-->
+
                     <!--Senha-->
                     <div class="form-group colorFont mb-3">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha"
-                            placeholder="Senha para acesso">
+                        <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha"
+                            id="senha" placeholder="Senha para acesso">
                     </div>
                     <!--/Senha-->
+
                     <!--Confirma senha-->
                     <div class="form-group colorFont mb-3">
                         <label for="confirmarSenha">Confirmar Senha</label>
-                        <input class="form-control" type="password" name="confirmarSenha" id="confirmarSenha"
-                            placeholder="Confirme sua senha">
+                        <input [(ngModel)]='usuario.senha' class="form-control" type="password" name="confirmarSenha"
+                            id="confirmarSenha" placeholder="Confirme sua senha">
                     </div>
                     <!--/Confirma senha-->
+
+                    <div class="form-group colorFont mb-3">
+                        <label for="tipo">Tipo de Usuario</label>
+                        <select class=" form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
+                            <option>Selecione o tipo de usuario:</option>
+                            <option value="produtor">Produtor</option>
+                            <option value="cliente">Cliente</option>
+                        </select>
+                    </div>
+
                     <!--Botoes-->
                     <div class="d-flex justify-content-center mb-5 mt-5">
                         <!--Botao Cancelar-->
-                        <button type="submity" class="btn btn-outline-danger mr-4" routerLink="/login">
+                        <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/login">
                             <i class="fa fa-times" aria-hidden="true"></i>
                             Cancelar</button>
                         <!--/Botao cancelar-->
+
                         <!--Botao cadastrar-->
-                        <button type="submity" class="btn btn-outline-success ml-4">
-                            <i class="fa fa-check" aria-hidden="true"></i>
-                            Cadastrar</button>
-                        <!--/Botao cadastrar-->
-                    </div>
-                    <!--/Botoes-->
+                        <button type="submit" class="btn btn-outline-success ml-4" (click)='cadastrar()'>
+                            <i class="fa fa-check" aria-hidden="true"></i> Cadastrar</button>
+                           
+                    <!--/Botao cadastrar-->
                 </div>
+                <!--/Botoes-->
+                <hr class="mt-5 mb-5">
+                <p class="text-center">Já possuí uma conta? <a routerLink='/login'>Logar</a></p>
+
             </div>
-            <!--</div>-->
-            <div class="col-md-3 mb-5"></div>
         </div>
-        <!--/bloco cadastro-->
+        <!--</div>-->
+        <div class="col-md-3 mb-5"></div>
     </div>
-    <!--/Margens do top e botton-->
+    <!--/bloco cadastro-->
+</div>
+<!--/Margens do top e botton-->
 </div>
 <!--/container-->
