--- a/FrontEnd/eRural/src/app/login/login.component.html
+++ b/FrontEnd/eRural/src/app/login/login.component.html
@@ -11,16 +11,16 @@
 
                     <div class="form-group colorFont indentaLetra">
                         <label for="usuario ">E-mail</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario"
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario"
                             placeholder="Informe seu melhor e-mail">
                     </div>
                     <div class="form-group colorFont indentaLetra">
                         <label for="usuario">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha"
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha"
                             placeholder="Informe sua senha">
                     </div>
                     <div class="d-flex justify-content-center colorFont">
-                        <button type="submit" class="btn btn-outline-success">Entrar</button>
+                        <button type="submit" class="btn btn-outline-success" (click)='entrar()'>Entrar</button>
                     </div>
                     <hr class="mt-5 mb-5 ">
                     <p class="text-center colorFont mb-5">
