--- a/FrontEnd/eRural/src/app/rodape/rodape.component.html
+++ b/FrontEnd/eRural/src/app/rodape/rodape.component.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
 
-            <div class="col-md-4 flex-wrap justify-content-between align-items-center mb-1">
+            <div class="col-md-4 flex-wrap justify-content-center align-items-center mb-1">
 
                 <div class="container">
                     <div class="row">
@@ -46,22 +46,33 @@
                 </div>
 
             </div>
-            <div class="col-md-4 flex-wrap align-items-center mb-1">
+            <div class="col-md-4 flex-wrap justify-content-between align-items-end mb-1">
 
-                <div class="pagamento">
-                    <p>Métodos de pagamento</p>
-                </div>
-                <div>
-                    <div class="container">
-                        <ul class="sci">
-                            <li><a href="#"><i class="fa fa-cc-paypal"></i><i class="fa fa-barcode"></i><i class="fa fa-cc-visa"></i><i class="fa fa-cc-mastercard"></i></a></li>
-                          
-                        </ul>
-                      </div>
-                      </div>
-                </div>
+              <div class="row d-flex justify-content-center ">
+                <h5 class="mt-3 mb-4">Métodos de Pagamento</h5>
+              </div>
 
-               
+              <div class="row d-flex justify-content-center">
+                  <div class="col-1 col-md-3 ">
+                      <img height="60px" width="60px" src="https://imgur.com/D7ARGNJ.png" alt="Bandeira Mastercard">
+                  </div>
+                  <div class="col-1 col-md-3 ">
+                      <img height="60px" width="60px" src="https://imgur.com/roUdy2h.png" alt="Bandeira Visa">
+                  </div>
+              </div>
+
+              <div class="row d-flex justify-content-center mt-3 align-items-center">
+                <div class="col-1 col-md-3">
+                  <img height="50px" width="50px" src="https://imgur.com/rmNGPWb.png" alt="American Exoress">
+              </div>
+              <div class="col-1 col-md-3">
+                  <img height="50px" width="50px" src="https://imgur.com/2W8be9P.png" alt="Elo Card">
+              </div>
+              </div>
+
+          </div>
+
+
             </div>
             <div class="copyrigth">
                 <p>eRural | Copyright ©2021 </p>
