--- a/FrontEnd/eRural/src/app/rodape/rodape.component.css
+++ b/FrontEnd/eRural/src/app/rodape/rodape.component.css
@@ -20,6 +20,10 @@ ul.contato {
 {    
     color:white;
 }
+.contato li a:hover
+{    
+    color:rgb(78, 212, 16);
+}
 
 .logo{
     margin: 20px;
@@ -38,21 +42,21 @@ ul.contato {
     align-items: center;
 }
 
-.social-network .fa-github 
+/*.social-network .fa-github 
 {
     max-width: 10%;
     max-height: 10%;
     transform: scale(0.9);
     opacity: 0.7;
-}
+}*/
 
-.social-network .fa-instagram
+/*.social-network .fa-instagram
 {
     max-width: 10%;
     max-height: 10%;
     transform: scale(1.0);
     opacity: 0.7;
-}
+}*/
 
 .social-network  .fa-github:hover
 {
@@ -60,6 +64,11 @@ ul.contato {
     color: rgb(78, 212, 16);
 }
 
+.social-network  .fa-instagram:hover
+{
+    opacity: 1;
+    color: rgb(78, 212, 16);
+}
 ul.social-network{
     list-style:none;
     padding: 0;
@@ -67,7 +76,7 @@ ul.social-network{
 ul.social-network li{
     display: inline;
     margin: 0;
-    padding: 10px;
+    padding: 5px;
     
 }
 
@@ -82,15 +91,14 @@ ul.social-network li{
     padding: 10px;
 }
 
-.pagamento p
+/*.pagamento p
 {   
     text-align: center;
     font-size: 20px;
     margin:30px;
     padding: 0;
     color: white;
-}
-
+}*/
 
 ul.sci
 {
@@ -122,5 +130,14 @@ padding: 0;
     color: #fff;
 }
 
+.wh-img-50 {
+  width: 50px;
+  height: 50px;
+}
+
+.wh-img-60 {
+  width: 60px;
+  height: 60px;
+}
 
 
