--- a/FrontEnd/eRural/src/app/menu/menu.component.css
+++ b/FrontEnd/eRural/src/app/menu/menu.component.css
@@ -1,6 +1,4 @@
-.menuBar{
-    background-color: #397900;
-}
+
 
 .btn-outline-success{
     background-color: none;
@@ -16,4 +14,32 @@
 .fontMenu{
     color: black;
     font-size: 18px;
+}
+.header1{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.06s;
+    
+}
+.headerLogo{
+    position: relative;
+    font-weight: 700;
+    color: #fff
+}
+
+.header1{
+    
+        background-color: #397900;
+        transition: 0.06s;
+    
+}
+.stick{
+    scroll-behavior: smooth;
+    transition: 0.06s;
+    opacity: .7;
 }
