--- a/FrontEnd/eRural/src/app/rodape/rodape.component.html
+++ b/FrontEnd/eRural/src/app/rodape/rodape.component.html
@@ -54,8 +54,9 @@
                 <div>
                     <div class="container">
                         <ul class="sci">
-                            <li><a href="#"><i class="fa fa-cc-paypal"></i><i class="fa fa-barcode"></i><i class="fa fa-cc-visa"></i><i class="fa fa-cc-mastercard"></i></a></li>
-                          
+                          <li>
+                            <i class="fa fa-cc-mastercard"></i>
+                          </li>
                         </ul>
                       </div>
                       </div>
