Implementação de consumo HTTP - GET e POST

--- a/FrontEnd/eRural/src/app/menu-cliente/menu-cliente.component.html
+++ b/FrontEnd/eRural/src/app/menu-cliente/menu-cliente.component.html
@@ -18,27 +18,25 @@
         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu
+            Minha Conta
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item fontMenu" routerLink="/login">Login/Cadastrar</a>
-            <a class="dropdown-item fontMenu" routerLink='/ajuda'>Me ajuda!</a>
-            <a class="dropdown-item fontMenu" routerLink='/inicio-produtor'>Me ajuda!</a>
-            <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Me ajuda!</a>
-        
-            <a class="dropdown-item fontMenu" routerLink='/listaProdutos'>Lista Produtos</a> <!--APAGAR DEPOIS-->
+            <a class="dropdown-item fontMenu" routerLink="">Meus dados</a> <!--TELA DO FORMuLARIO DE DADOS DO CLIENTE-->
+            <a class="dropdown-item fontMenu" href="#">Me ajuda!</a> <!--PAG com as principais duvidas do cliente-->
             <div class="dropdown-divider"></div>
-            
-            <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
+        
+            <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a> <!--botao que esvazia todos os envioriments-->
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle fontMenu mr-3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Pedidos
+            Meus Pedidos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item fontMenu" routerLink="/login">Precisa estar logado!</a>
-            
+            <a class="dropdown-item fontMenu" href="#">Cancelados</a>
+            <a class="dropdown-item fontMenu" href="#">a Receber</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item fontMenu" href="#">Concluidos</a>
           </div>
         </li>
         <li class="nav-item">
