--- a/FrontEnd/eRural/src/app/inicial/inicial.component.html
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.html
@@ -1,18 +1,48 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+  <div class="jumbotron jumbotron-fluid jumbotronBackground">
+    <div class="container">
+      <h1 class="display-4">eRural</h1>
+      <h2>Alimentação saudável é fundamental</h2>
+      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
+      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
+    </div>
+  </div>
+
+  <div class="jumbotron jumbotron-fluid jumbotronBackground">
+    <div class="container">
+      <h1 class="display-4">eRural</h1>
+      <h2>Alimentação saudável é fundamental</h2>
+      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
+      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
+    </div>
+  </div>
+
+  <div class="jumbotron jumbotron-fluid jumbotronBackground">
+    <div class="container">
+      <h1 class="display-4">eRural</h1>
+      <h2>Alimentação saudável é fundamental</h2>
+      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
+      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
+    </div>
+  </div>
+
+
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carro carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://i.imgur.com/JM4iYOB.jpg" alt="Primeiro Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/u3XPxbg.jpg" alt="Primeiro Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.imgur.com/1VDmpP4.jpg" alt="Segundo Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/W1ApRdf.jpg" alt="Segundo Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.imgur.com/M7HTMiU.jpg" alt="Terceiro Slide">
+        <img class="d-block w-100" src="https://i.imgur.com/4VaegwM.jpg" alt="Terceiro Slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -23,12 +53,4 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Próximo</span>
     </a>
-  </div>
-  <div class="jumbotron jumbotron-fluid jumbotronBackground">
-    <div class="container">
-      <h1 class="display-4">eRural</h1>
-      <h2>Alimentação saudável é fundamental</h2>
-      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
-      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
-    </div>
   </div>
