--- a/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.css
+++ b/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.css
@@ -1,5 +1,3 @@
-
-
 .btn-outline-success{
     background-color: none;
     border-color: white;
@@ -36,11 +34,11 @@
     
         background-color: #397900;
         transition: 0.06s;
-        z-index: 1;
+        z-index: 1
 }
 .stick{
     scroll-behavior: smooth;
     transition: 0.06s;
     opacity: .7;
-    z-index: 1;
+    z-index: 1
 }
