att pag produtor, cliente, cadastroProd

--- a/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
@@ -32,6 +32,60 @@
   </a>
 </div>
 <!--/CARROSEL-->
+<!--CARD--><!--após fazer a service de Categoria, linkar categoria aqui! Lembre-se o card só aparece quando cadastrar a categoria-->
+<div class="container">
+  <div class="row mb-5 mt-5">
+    <div class="product card mr-3 mt-5 ml-3 mb-2">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/v2Tyk5a.png">
+      </div>
+      <div class="details">
+        <h2>Vegetais <br><span>Frescos</span></h2>
+        <div class="preco">A partir de R$ 1.99</div>
+        <a class="card1" href="#">Verifique todos!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
+
+    <div class="product card mr-3 mt-5 ml-3 mb-2">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/v2Tyk5a.png">
+      </div>
+      <div class="details">
+        <h2>Vegetais <br><span>Frescos</span></h2>
+        <div class="preco">A partir de R$ 1.99</div>
+        <a class="card1" href="#">Verifique todos!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
+
+    <div class="product card mr-3 mt-5 ml-3 mb-2">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/v2Tyk5a.png">
+      </div>
+      <div class="details">
+        <h2>Vegetais <br><span>Frescos</span></h2>
+        <div class="preco">A partir de R$ 1.99</div>
+        <a class="card1" href="#">Verifique todos!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
+
+    <div class="product card mr-3 mt-5 ml-3 mb-2">
+      <div class="imgbox">
+        <img src="https://i.imgur.com/v2Tyk5a.png">
+      </div>
+      <div class="details">
+        <h2>Vegetais <br><span>Frescos</span></h2>
+        <div class="preco">A partir de R$ 1.99</div>
+        <a class="card1" href="#">Verifique todos!</a>
+        <!--CARRINHO-->
+      </div>
+    </div>
+
+  </div>
+</div>
+<!--/CARD-->
 
 <!--jumbotrom-->
 <div class="jumbotron jumbotron-fluid jumbotronBackground">
@@ -63,46 +117,14 @@
 </div>
 <!--/jumbotrom-->
 
-<!--CARD-->
-<!--após fazer a service de Categoria, linkar categoria aqui! Lembre-se o card só aparece quando cadastrar a categoria-->
-<div class="container d-flex">
-  <div class="row mb-5 mt-5 m-auto">
+<!--Card-Produtos--><!--adiconar listagem de produtos em ordem de postagem para os clientes-->
+<div class="container">
+  <div class="row mb-5 mt-5">
     
-      <div class="product card mr-3 mt-5 ml-3 mb-5">
-        <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
-        </div>
-        <div class="details">
-          <h2>Vegetais<br><span>Frescos</span></h2>
-          <div class="preco">Seu preço aqui!</div>
-          <a class="card1" href="#">Cadastre seus produtos!</a>
-          <!--CARRINHO-->
-        </div>
-      </div>
+    
 
-      <div class="product card mr-3 mt-5 ml-3 mb-5">
-        <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
-        </div>
-        <div class="details">
-          <h2>Hortaliças <br><span>Frescas</span></h2>
-          <div class="preco">Seu preço aqui!</div>
-          <a class="card1" href="#">Cadastre seus produtos!</a>
-          <!--CARRINHO-->
-        </div>
-      </div>
 
-      <div class="product card mr-3 mt-5 ml-3 mb-5">
-        <div class="imgbox">
-          <img src="https://i.imgur.com/v2Tyk5a.png">
-        </div>
-        <div class="details">
-          <h2>Ferramentas <br><span>Itens para plantio</span></h2>
-          <div class="preco">Seu preço aqui!</div>
-          <a class="card1" href="#">Cadastre seus produtos</a>
-          <!--CARRINHO-->
-        </div>
-      </div>
+
   </div>
 </div>
-<!--/CARD-->
+<!--/Card-Produtos-->
