--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -4,7 +4,7 @@
         
         <div class="col-md-6">
             <!--aqui é a foto-->
-            <img height="550px" width="550px" src="../../assets/img/fruta.jpg" alt="imagem de um caju">
+           
         </div>
 
         <div class="col-md-6">
@@ -16,19 +16,19 @@
                   </div>
                   <div class="form-group">
                     <label for="textQuantidade" class="control-label">Quantidade</label>	    
-                    <input id="textQuantidade" class="form-control" placeholder="Digite a Quantidade" type="text" required>	  
+                    <input [(ngModel)]='produto.quantidade' id="textQuantidade" class="form-control" placeholder="Digite a Quantidade" type="text" required>	  
                   </div>
                   <div class="form-group">
                     <label for="textPeso" class="control-label">Peso</label>	    
-                    <input id="textPeso" class="form-control" placeholder="Digite o Peso" type="text" required>	  
+                    <input [(ngModel)]='produto.peso' id="textPeso" class="form-control" placeholder="Digite o Peso" type="text" required>	  
                   </div>
                   <div class="form-group">
                     <label for="textPreço" class="control-label">Preço</label>	    
-                    <input id="textPreço" class="form-control" placeholder="Digite o Preço" type="text" required>	  
+                    <input [(ngModel)]='produto.preco' id="textPreço" class="form-control" placeholder="Digite o Preço" type="text" required>	  
                   </div>
                   <div class="form-group">
                     <label for="textLink" class="control-label">Link</label>	    
-                    <input id="textLink" class="form-control" placeholder="Cole o link da imagem aqui" type="text" required>	  
+                    <input [(ngModel)]='produto.imagem' id="textLink" class="form-control" placeholder="Cole o link da imagem aqui" type="text" required>	  
                   </div>
                   <div class="form-group">
                     <label for="for="textDescrição class="control-label">Descrição</label>
@@ -36,14 +36,14 @@
                  </div>
                  <div class="d-flex justify-content-center mb-5 mt-5">
                     <!--Botao Cancelar-->
-                    <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/login">
+                    <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/inicio">
                         <i class="fa fa-times" aria-hidden="true"></i>
                         Cancelar</button>
                     <!--/Botao cancelar-->
 
                     <!--Botao cadastrar-->
                     <button type="submit" class="btn btn-outline-success ml-4">
-                        <i class="fa fa-check" aria-hidden="true"></i> Cadastrar</button>         
+                        <i class="fa fa-check" aria-hidden="true" (click)='cadastrarProduto()' ></i> Cadastrar</button>         
                 <!--/Botao cadastrar-->
             </div>
 
