--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
@@ -8,17 +8,17 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100 img-teste"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcsp9wKBc-R2eHJhKWuy1JbVoCppaDJQjagA&usqp=CAU"
+        src="https://imgur.com/cvuF0FY.png"
         alt="Primeiro Slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 img-teste"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcsp9wKBc-R2eHJhKWuy1JbVoCppaDJQjagA&usqp=CAU"
+        src="https://imgur.com/N6Y46VQ.png"
         alt="Segundo Slide">
     </div>
     <div class="carousel-item img-teste">
       <img class="d-block w-100"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcsp9wKBc-R2eHJhKWuy1JbVoCppaDJQjagA&usqp=CAU"
+        src="https://imgur.com/MPqrTFz.png"
         alt="Terceiro Slide">
     </div>
   </div>
@@ -67,7 +67,7 @@
 <!--após fazer a service de Categoria, linkar categoria aqui! Lembre-se o card só aparece quando cadastrar a categoria-->
 <div class="container d-flex">
   <div class="row mb-5 mt-5 m-auto">
-    
+
       <div class="product card mr-3 mt-5 ml-3 mb-5">
         <div class="imgbox">
           <img src="https://i.imgur.com/v2Tyk5a.png">
