--- a/FrontEnd/eRural/src/app/rodape/rodape.component.html
+++ b/FrontEnd/eRural/src/app/rodape/rodape.component.html
@@ -1,84 +1,96 @@
 <footer class="page-footer font-small">
-    <div class="container">
-        <div class="row">
-            <!-- 1ª Coluna: Informações-->
-            <div class="col-md-4 d-flex justify-content-center">
+  <div class="container">
 
-                <ul class="contato align">
-                    <li>
-                        <a target="_blank" href="https://www.google.com.br">Sobre</a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="">Contato</a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="">Trabalhe conosco</a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="">Política de privacidade</a>
-                    </li>
-                </ul>
+      <div class="row">
+          <!-- 1ª Coluna: Informações-->
+          <div class="col-md-4 d-flex justify-content-center">
+
+              <ul class="contato align">
+                  <li>
+                      <a target="_blank" href="https://www.google.com.br">Sobre</a>
+                  </li>
+                  <li>
+                      <a target="_blank" href="">Contato</a>
+                  </li>
+                  <li>
+                      <a target="_blank" href="">Trabalhe conosco</a>
+                  </li>
+                  <li>
+                      <a target="_blank" href="">Política de privacidade</a>
+                  </li>
+              </ul>
+          </div>
+          <!-- /1ª Coluna: Informações-->
+
+          <!-- 2ª Coluna: Logo + Redes Sociais-->
+          <div class="col-md-4 flex-wrap justify-content-center align-items-center">
+
+              <div class="container">
+                  <div class="row">
+                      <div class="logo col-md-12 d-flex justify-content-center">
+                          <img class="logoErural"src="https://i.imgur.com/s3WJpcI.png" alt="">
+                       </div>
+                  </div>
+                  <div class="row d-flex justify-content-around align-items-center">
+                    <ul class="social-network">
+                      <li>
+                        <a href="https://github.com/WellingtonSB/eRural" target="_blank" class="iconGitHub">
+                          <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.instagram.com/e.rurals/" target="_blank" class="iconInstragram">
+                          <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                      </li>
+                     </ul>
+                  </div>
+
+
+
+
+
+
+              </div>
+
+          </div>
+          <!-- /2ª Coluna: Logo + Redes Sociais-->
+
+          <!-- 3ª Coluna: Métodos Pagamento-->
+          <div class="col-md-4 flex-wrap justify-content-center">
+
+            <div class="row d-flex justify-content-center ">
+              <h5 class="mt-3 mb-4">Métodos de Pagamento</h5>
             </div>
-            <!-- /1ª Coluna: Informações-->
 
-            <!-- 2ª Coluna: Logo + Redes Sociais-->
-            <div class="col-md-4 flex-wrap justify-content-center align-items-center">
-
-                <!-- 2ª Coluna: Logo + Redes Sociais-->
-                <div class="col-md-4 flex-wrap justify-content-center align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="logo col-md-12 d-flex justify-content-center">
-                                <img class="logoErural" src="https://i.imgur.com/s3WJpcI.png" alt="">
-                            </div>
-                        </div>
-                        <div class="row d-flex justify-content-around align-items-center">
-                            <ul class="social-network">
-                                <li>
-                                    <a href="https://github.com/WellingtonSB/eRural" target="_blank" class="iconGitHub">
-                                        <i class="fa fa-github" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.instagram.com/e.rurals/" target="_blank"
-                                        class="iconInstragram">
-                                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-1 col-md-3 ">
+                    <img class="img-fluid wh-img-60" src="https://imgur.com/D7ARGNJ.png" alt="Bandeira Mastercard">
                 </div>
-                <!-- /2ª Coluna: Logo + Redes Sociais-->
 
-                <!-- 3ª Coluna: Métodos Pagamento-->
-                <div class="col-md-4 flex-wrap justify-content-center">
-                    <div class="row d-flex justify-content-center ">
-                        <h5 class="mt-3 mb-4">Métodos de Pagamento</h5>
-                    </div>
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-1 col-md-3 ">
-                            <img class="img-fluid wh-img-60" src="https://imgur.com/D7ARGNJ.png"
-                                alt="Bandeira Mastercard">
-                        </div>
-                        <div class="col-1 col-md-3 ">
-                            <img class="img-fluid wh-img-60" src="https://imgur.com/roUdy2h.png" alt="Bandeira Visa">
-                        </div>
-                    </div>
-                    <div class="row d-flex justify-content-center mt-3 align-items-center">
-                        <div class="col-1 col-md-3">
-                            <img class="img-fluid wh-img-50" src="https://imgur.com/rmNGPWb.png" alt="American Exoress">
-                        </div>
-                        <div class="col-1 col-md-3">
-                            <img class="img-fluid wh-img-50" src="https://imgur.com/2W8be9P.png" alt="Elo Card">
-                        </div>
-                    </div>
+                <div class="col-1 col-md-3 ">
+                    <img class="img-fluid wh-img-60" src="https://imgur.com/roUdy2h.png" alt="Bandeira Visa">
                 </div>
-                <!-- /3ª Coluna: Métodos Pagamento-->
+
             </div>
-            <div class="copyrigth">
-                <p>eRural | Copyright ©2021 </p>
+
+            <div class="row d-flex justify-content-center mt-3 align-items-center">
+
+              <div class="col-1 col-md-3">
+                <img class="img-fluid wh-img-50" src="https://imgur.com/rmNGPWb.png" alt="American Exoress">
             </div>
-        </div>
-    </div>
+
+            <div class="col-1 col-md-3">
+                <img class="img-fluid wh-img-50" src="https://imgur.com/2W8be9P.png" alt="Elo Card">
+            </div>
+
+            </div>
+         </div>
+         <!-- /3ª Coluna: Métodos Pagamento-->
+      </div>
+
+          <div class="copyrigth">
+              <p>eRural | Copyright ©2021 </p>
+          </div>
+  </div>
 </footer>
