--- a/FrontEnd/eRural/src/app/cadastro/cadastro.component.html
+++ b/FrontEnd/eRural/src/app/cadastro/cadastro.component.html
@@ -71,8 +71,8 @@
                     <!--/Botao cadastrar-->
                 </div>
                 <!--/Botoes-->
-                <hr class="mt-5 mb-5">
-                <p class="text-center">Já possuí uma conta? <a routerLink='/login'>Logar</a></p>
+                <hr>
+                <p class="text-center">Já possuí uma conta? <a routerLink='/login'>Entrar</a></p>
 
             </div>
         </div>
