--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
@@ -75,7 +75,7 @@
         <div class="details">
           <h2>Vegetais<br><span>Frescos</span></h2>
           <div class="preco">Seu preço aqui!</div>
-          <a class="card1" href="#">Cadastre seus produtos!</a>
+          <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos!</a>
           <!--CARRINHO-->
         </div>
       </div>
@@ -87,7 +87,7 @@
         <div class="details">
           <h2>Hortaliças <br><span>Frescas</span></h2>
           <div class="preco">Seu preço aqui!</div>
-          <a class="card1" href="#">Cadastre seus produtos!</a>
+          <a class="card1"routerLink="/cadastro-produto">Cadastre seus produtos!</a>
           <!--CARRINHO-->
         </div>
       </div>
@@ -99,7 +99,7 @@
         <div class="details">
           <h2>Ferramentas <br><span>Itens para plantio</span></h2>
           <div class="preco">Seu preço aqui!</div>
-          <a class="card1" href="#">Cadastre seus produtos</a>
+          <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos</a>
           <!--CARRINHO-->
         </div>
       </div>
