--- a/FrontEnd/eRural/src/app/lista-produto/lista-produto.component.html
+++ b/FrontEnd/eRural/src/app/lista-produto/lista-produto.component.html
@@ -3,25 +3,22 @@
     <div class="row mt-5">
         <div class="col-md-3 justify-content-center">
             <div class="mt-5 ml-5 d-flex align-items-start flex-column bd-highlight mb-3" style="height: 200px;">
-                <div class="mb-auto p-2 bd-highlight">{{produto.categorias}}</div>     
+                <div class="mb-auto p-2 bd-highlight">{{produto.categorias}}</div>
             </div>
         </div>
-            <div *ngFor='let item of listaProdutos' class="product card mr-3 mt-5 ml-3 mb-2">
-                <div class= "imgbox">
-                    <img src="{{produto.imagem}}">
-                </div>
-                <div class = "details">
-                    <h2>{{produto.nome}}<br><span>{{produto.categorias}}</span></h2>
-                    <div class="preco">{{produto.preco}}</div>
-                    <label></label>
+        <div *ngFor='let item of listaProdutos' class="product card mr-3 mt-5 ml-3 mb-2">
+            <div class="imgbox">
+                <img src="{{produto.imagem}}">
+            </div>
+            <div class="details">
+                <h2>{{produto.nome}}<br><span>{{produto.categorias}}</span></h2>
+                <div class="preco">{{produto.preco}}</div>
+                <label></label>
                 <label>Quantidade: {{produto.quantidade}}</label><br>
                 <label>Peso: {{produto.peso}}</label>
-                
-                <a href="#">adicionar ao carrinho</a> <!--CARRINHO-->
-                </div>
-                
+                <a href="#">adicionar ao carrinho</a>
+                <!--CARRINHO-->
             </div>
-           
+        </div>
     </div>
 </div>
-
