--- a/FrontEnd/eRural/src/app/login/login.component.html
+++ b/FrontEnd/eRural/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="menu continer-fluid justify-content-center m-auto">
+<div class="menu continer-fluid justify-content-center m-auto mt-5">
     <div class="row d-flex mt-5 mb-5">
         <div class="col-md-3  justify-content-center"></div>
         <div class="col-md-6  justify-content-center">
