--- a/FrontEnd/eRural/src/app/menu-cliente/menu-cliente.component.html
+++ b/FrontEnd/eRural/src/app/menu-cliente/menu-cliente.component.html
@@ -21,7 +21,7 @@
             Minha Conta
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item fontMenu" routerLink="">Meus dados</a> <!--TELA DO FORMuLARIO DE DADOS DO CLIENTE-->
+            <a class="dropdown-item fontMenu" routerLink="">Cliente</a> <!--TELA DO FORMuLARIO DE DADOS DO CLIENTE-->
             <a class="dropdown-item fontMenu" href="#">Me ajuda!</a> <!--PAG com as principais duvidas do cliente-->
             <div class="dropdown-divider"></div>
         
