--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -1,53 +1,3 @@
-<<<<<<< HEAD
-<div class="container mt-5">
-    <div class="row d-flex align-itens-center">
-    
-        
-        <div class="col-md-6">
-            <!--aqui é a foto-->
-           
-        </div>
-
-        <div class="col-md-6">
-            <!--aqui e o formulario-->
-            <form id="formExemplo" data-toggle="validator" role="form">
-                <div class="form-group">
-                    <label for="textNome" class="control-label">Nome</label>	    
-                    <input id="textNome" class="form-control" placeholder="Nome do Produto" type="text" required>	  
-                  </div>
-                  <div class="form-group">
-                    <label for="textQuantidade" class="control-label">Quantidade</label>	    
-                    <input [(ngModel)]='produto.quantidade' id="textQuantidade" class="form-control" placeholder="Digite a Quantidade" type="text" required>	  
-                  </div>
-                  <div class="form-group">
-                    <label for="textPeso" class="control-label">Peso</label>	    
-                    <input [(ngModel)]='produto.peso' id="textPeso" class="form-control" placeholder="Digite o Peso" type="text" required>	  
-                  </div>
-                  <div class="form-group">
-                    <label for="textPreço" class="control-label">Preço</label>	    
-                    <input [(ngModel)]='produto.preco' id="textPreço" class="form-control" placeholder="Digite o Preço" type="text" required>	  
-                  </div>
-                  <div class="form-group">
-                    <label for="textLink" class="control-label">Link</label>	    
-                    <input [(ngModel)]='produto.imagem' id="textLink" class="form-control" placeholder="Cole o link da imagem aqui" type="text" required>	  
-                  </div>
-                  <div class="form-group">
-                    <label for="for="textDescrição class="control-label">Descrição</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                 </div>
-                 <div class="d-flex justify-content-center mb-5 mt-5">
-                    <!--Botao Cancelar-->
-                    <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/inicio">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                        Cancelar</button>
-                    <!--/Botao cancelar-->
-
-                    <!--Botao cadastrar-->
-                    <button type="submit" class="btn btn-outline-success ml-4">
-                        <i class="fa fa-check" aria-hidden="true" (click)='cadastrarProduto()' ></i> Cadastrar</button>         
-                <!--/Botao cadastrar-->
-            </div>
-=======
 <div class="container ">
   <div class="row mt-5 mb-5">
     <div class="m-auto">
@@ -68,14 +18,16 @@
       <form id="formExemplo" data-toggle="validator" role="form">
         <div class="form-group">
           <label for="textNome" class="control-label">Nome</label>
-          <input id="textNome" class="form-control" placeholder="Nome do Produto" type="text" required>
+          <input [(ngModel)]='produto.nome' id="textNome" class="form-control" placeholder="Nome do Produto" type="text" required>
         </div>
 
-        <div class="form-group"> <!--AS OPTIONS DEVERAM SER ALTERADAS POSTERIORMENTE, LINKAR COM CATEGORIA-->
+        <div class="form-group">
+          <!--AS OPTIONS DEVERAM SER ALTERADAS POSTERIORMENTE, LINKAR COM CATEGORIA-->
           <label for="exampleFormControlSelect1">Categoria</label>
           <select class="form-control" id="exampleFormControlSelect1">
             <option value="">Selecione a categoria de seu produto</option>
-            <option>Vegetais</option> <!--aqui iremos chamar as categorias que iremos cadastrar, colocaremos um *ngFor-->
+            <option>Vegetais</option>
+            <!--aqui iremos chamar as categorias que iremos cadastrar, colocaremos um *ngFor-->
             <option>Hortaliças</option>
             <option>Ferramentas de cultivo</option>
             <option>Outros</option>
@@ -84,11 +36,11 @@
 
         <div class="form-group">
           <label for="textQuantidade" class="control-label">Quantidade</label>
-          <input id="textQuantidade" class="form-control" placeholder="Digite a Quantidade" type="text" required>
+          <input  id="textQuantidade" class="form-control" placeholder="Digite a Quantidade" type="text" required>
         </div>
         <div class="form-group">
           <label for="textPeso" class="control-label">Peso</label>
-          <input id="textPeso" class="form-control" placeholder="Digite o Peso" type="text" required>
+          <input  id="textPeso" class="form-control" placeholder="Digite o Peso" type="text" required>
         </div>
         <div class="form-group">
           <label for="textPreço" class="control-label">Preço</label>
@@ -108,15 +60,13 @@
             <i class="fa fa-times" aria-hidden="true"></i>
             Cancelar</button>
           <!--/Botao cancelar-->
->>>>>>> ec4abd18f3f3d6060f234f39e881970dba65b4ce
 
           <!--Botao cadastrar-->
-          <button type="submit" class="btn btn-outline-success ml-4">
+          <button type="submit" class="btn btn-outline-success ml-4" (click)='cadastrar()'>
             <i class="fa fa-check" aria-hidden="true"></i> Cadastrar</button>
           <!--/Botao cadastrar-->
         </div>
       </form>
     </div>
   </div>
-
 </div>
