--- a/FrontEnd/eRural/src/app/app.component.html
+++ b/FrontEnd/eRural/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-menu></app-menu>
-<app-inicio-produtor></app-inicio-produtor>
+<!--app-menu-produtor *ngIf="expression"></!--app-menu-produtor-->
+
+<!--app-cliente></!--app-cliente-->
+<!--app-menu></!--app-menu-->
+<router-outlet></router-outlet>
 <app-rodape></app-rodape>
