--- a/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.html
+++ b/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.html
@@ -23,6 +23,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item fontMenu" href="#">Me Ajuda!</a>
             <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Cadastrar Produto</a>
+            <a class="dropdown-item fontMenu" routerLink='/listaProdutos'>Produtos</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
           </div>
