--- a/FrontEnd/eRural/src/app/menu-cliente/menu-cliente.component.html
+++ b/FrontEnd/eRural/src/app/menu-cliente/menu-cliente.component.html
@@ -23,6 +23,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item fontMenu" routerLink="">Cliente</a> <!--TELA DO FORMuLARIO DE DADOS DO CLIENTE-->
             <a class="dropdown-item fontMenu" href="#">Me ajuda!</a> <!--PAG com as principais duvidas do cliente-->
+            <a class="dropdown-item fontMenu" routerLink='/listaProdutos'>Produtos</a>
             <div class="dropdown-divider"></div>
         
             <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a> <!--botao que esvazia todos os envioriments-->
