--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -46,9 +46,10 @@
           <label for="textLink" class="control-label">Link</label>
           <input [(ngModel)]='produto.imagem' id="textLink" class="form-control" placeholder="Cole o link da imagem aqui" type="text" required>
         </div>
-       <div class="form-group">
-          <label for="for=" textDescrição class="control-label">Descrição</label>
-          <textarea [(ngModel)]='produto.descricao'  class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div class="form-group">
+          <label for="textLink" class="control-label">Descrição</label>
+          <input [(ngModel)]='produto.descricao' id="textLink" class="form-control"
+            placeholder="Descrição produto" type="text" required>
         </div> 
         <div class="d-flex justify-content-center mb-5 mt-5">
           <!--Botao Cancelar-->
