add:Component Edit/produtos

--- a/FrontEnd/eRural/src/app/lista-produto/lista-produto.component.html
+++ b/FrontEnd/eRural/src/app/lista-produto/lista-produto.component.html
@@ -19,9 +19,10 @@
                 <label></label>
                 <label>Quantidade: {{item.quantidade}}</label><br>
                 <label>Peso: {{item.peso}}</label>
-                <button *ngIf='authService.produtor()== true'>Editar</button>
-                <button *ngIf='authService.produtor()== true'>Deletar</button>
-                <a *ngIf='authService.cliente()== true' href="#">adicionar ao carrinho</a>
+                <button class="btn btn-info mr-3" [routerLink]="['/editar-produto',produto.id]" >Editar</button>
+                <button>Deletar</button>
+               
+                <!-- <a  href="#">adicionar ao carrinho</a> -->
             </div>
         </div>
     </div>
