--- a/FrontEnd/eRural/src/app/cadastro/cadastro.component.html
+++ b/FrontEnd/eRural/src/app/cadastro/cadastro.component.html
@@ -53,7 +53,7 @@
                             <option>Selecione o tipo de usuario:</option>
                             <option value="produtor">Produtor</option>
                             <option value="cliente">Cliente</option>
-                            <option value="administrador">Administrador</option>
+                            <option value="admin">Administrador</option>
                         </select>
                     </div>
 
