--- a/FrontEnd/eRural/src/app/rodape/rodape.component.html
+++ b/FrontEnd/eRural/src/app/rodape/rodape.component.html
@@ -60,7 +60,7 @@
           <div class="col-md-4 flex-wrap justify-content-center">
 
             <div class="row d-flex justify-content-center ">
-              <h5 class="mt-3 mb-4">Métodos de Pagamento</h5>
+              <h5 class="mt-3 mb-4 text-white">Métodos de Pagamento</h5>
             </div>
 
             <div class="row d-flex justify-content-center">
