--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
@@ -73,8 +73,7 @@
           <img src="https://i.imgur.com/v2Tyk5a.png">
         </div>
         <div class="details">
-          <h2>Vegetais<br><span>Frescos</span></h2>
-          <div class="preco">Seu preço aqui!</div>
+          <h2 class="text-center">Vegetais<br><span>Frescos</span></h2>
           <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos!</a>
           <!--CARRINHO-->
         </div>
@@ -85,8 +84,7 @@
           <img src="https://i.imgur.com/v2Tyk5a.png">
         </div>
         <div class="details">
-          <h2>Hortaliças <br><span>Frescas</span></h2>
-          <div class="preco">Seu preço aqui!</div>
+          <h2 class="text-center">Hortaliças <br><span>Frescas</span></h2>
           <a class="card1"routerLink="/cadastro-produto">Cadastre seus produtos!</a>
           <!--CARRINHO-->
         </div>
@@ -97,9 +95,8 @@
           <img src="https://i.imgur.com/v2Tyk5a.png">
         </div>
         <div class="details">
-          <h2>Ferramentas <br><span>Itens para plantio</span></h2>
-          <div class="preco">Seu preço aqui!</div>
-          <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos</a>
+          <h2 class="text-center">Ferramentas <br><span>Itens para plantio</span></h2>
+          <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos!</a>
           <!--CARRINHO-->
         </div>
       </div>
