routerLinks inicio e lista OK

--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -58,11 +58,11 @@
           <label for="textLink" class="control-label">Descrição</label>
           <input [(ngModel)]='produto.descricao' id="textLink" class="form-control"
             placeholder="Descrição produto" type="text" required>
-        </div> 
+        </div>
 
         <div class="d-flex justify-content-center mb-5 mt-5">
           <!--Botao Cancelar-->
-          <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/login">
+          <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/inicio-produtor">
             <i class="fa fa-times" aria-hidden="true"></i>
             Cancelar</button>
           <!--/Botao cancelar-->
