add:Securança, sair com f5

--- a/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.html
@@ -87,7 +87,7 @@
         <div class="details">
           <h2>Hortaliças <br><span>Frescas</span></h2>
           <div class="preco">Seu preço aqui!</div>
-          <a class="card1"routerLink="/lista-produto">Veja mais!</a>
+          <a class="card1"routerLink="/listaProdutos">Veja mais!</a>
           <!--CARRINHO-->
         </div>
       </div>
@@ -103,7 +103,7 @@
           <div class="row d-flex justify-content-center mb-0">
             <p><small>Itens para plantio</small></p>
           </div>
-          <a class="card1" routerLink="/lista-produto">Consulte agora!</a>
+          <a class="card1" routerLink="/listaProdutos">Consulte agora!</a>
           <!--CARRINHO-->
         </div>
       </div>
