--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -62,7 +62,7 @@
 
         <div class="d-flex justify-content-center mb-5 mt-5">
           <!--Botao Cancelar-->
-          <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/login">
+          <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/listaProdutos">
             <i class="fa fa-times" aria-hidden="true"></i>
             Cancelar</button>
           <!--/Botao cancelar-->
