--- a/FrontEnd/eRural/src/app/app.component.html
+++ b/FrontEnd/eRural/src/app/app.component.html
@@ -1,10 +1,6 @@
-<!--app-menu></!--app-menu>
+<app-menu></app-menu>
+<app-menu *ngIf='auth.logado() && auth.administrador()'></app-menu>
 <app-menu-cliente *ngIf='auth.logado() && auth.cliente()'></app-menu-cliente>
-<app-menu-produtor *ngIf='auth.logado() && auth.produtor()'></-app-menu-produtor>
+<app-menu-produtor *ngIf='auth.logado() && auth.produtor()'></app-menu-produtor>
 <router-outlet></router-outlet>
-<app-rodape-- *ngIf='auth.logado()'> </app-rodape-->
-
-<app-menu-cliente></app-menu-cliente>
-<app-inicio-cliente></app-inicio-cliente>
-
-
+<app-rodape *ngIf='auth.logado()'></app-rodape>
