--- a/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.html
+++ b/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse menuBar text-center m-auto" id="conteudoNavbarSuportado">
       <ul class="navbar-nav m-auto">
         <li class="nav-item active">
-          <a class="nav-link ml-3" href="#"><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px" height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
+          <a class="nav-link ml-3" routerLink='/inicio-produtor'><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px" height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
         </li>
 
           <form class="form-inline ">
@@ -21,12 +21,8 @@
             Minha conta
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item fontMenu" href="#">Me Ajuda!</a>
             <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Cadastrar Produto</a>
             <a class="dropdown-item fontMenu" routerLink='/listaProdutos'>Produtos</a>
-            <a class="dropdown-item fontMenu" routerLink='/admin'>ADMIN</a>
-
-
             <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
           </div>
         </li>
